Fixing spacing and color issues with full-width paragraph bundles

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_paragraph_bundles.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_paragraph_bundles.scss
@@ -43,7 +43,7 @@
   }
 
   .entity-paragraphs-item {
-    @include clearfix;
+    @include pie-clearfix;
   }
 }
 
