--- a/docroot/sites/all/themes/ilr_theme/scss/components/_pb_display_a_block.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_pb_display_a_block.scss
@@ -2,11 +2,11 @@
 #main {
   #content {
     .paragraphs-item-display-a-block {
-      @include padding-leader(1.5);
-      @include padding-trailer(1.5);
+      @include leader(1.5);
+      @include trailer(1.5);
       .event-block, .tagged-content {
-        @include padding-leader(1);
-        @include padding-trailer(1);
+        @include leader(1);
+        @include trailer(1);
         @include grid-span (10,2);
       }
       article {
@@ -23,8 +23,8 @@
   #content {
     .entity-paragraphs-item {
       &.paragraphs-item-display-a-block {
-        @include padding-leader(1);
-        @include padding-trailer(1);
+        @include leader(1);
+        @include trailer(1);
         article.node-reflection {
           @extend %one-column;
         }
@@ -40,8 +40,8 @@
     }
     .entity-paragraphs-item {
       &.paragraphs-item-display-a-block {
-        @include padding-leader(1.5);
-        @include padding-trailer(1.5);
+        @include leader(1.5);
+        @include trailer(1.5);
       }
     }
   }
@@ -54,10 +54,10 @@
     }
     .entity-paragraphs-item {
       &.paragraphs-item-display-a-block {
-        @include padding-leader(1.5);
-        @include padding-trailer(1.5);
+        @include leader(1.5);
+        @include trailer(1.5);
         .event-block {
-          @include padding-leader(1.5);
+          @include leader(1.5);
         }
         article.localist-event, article.node-promo {
           @extend %three-column-masonry;
